Fixed bulk edit checkbox spacing

--- a/src/WebComponents/PersistentObjectAttributePresenter/persistent-object-attribute-presenter.scss
+++ b/src/WebComponents/PersistentObjectAttributePresenter/persistent-object-attribute-presenter.scss
@@ -36,6 +36,8 @@
     }
 
     vi-checkbox {
+        margin-right: var(--theme-h5);
+
         --vi-checkbox--icon-disabled: #{'{
             background-color: #eee;
         }'};
